k8s/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-app
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus-app
    app: prometheus-app
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-app
      app: prometheus-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-app
        app: prometheus-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: location
                    operator: In
                    values:
                      - local
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: prometheus-app
          image: "prom/prometheus:v2.55.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name: prometheus-db
              mountPath: /prometheus
            - name: prometheus-config
              mountPath: /etc/prometheus
      volumes:
        - name: prometheus-db
          persistentVolumeClaim:
            claimName: prometheus-db-pvc
        - name: prometheus-config
          configMap:
            name: prometheus-configmap
