k8s/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-app
  namespace: prometheus
spec:
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: prometheus-app
  type: ClusterIP
