k8s/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.className: traefik
spec:
  rules:
  - host: prometheus.local.koryalbert.net
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-app
                port:
                  number: 9090
